float_eq/tests/derive_tests/ulps_tol/ulps_tol_duplicate_type_name.stderr
error: Expected only one ULPs tolerance type name, previously saw `ulps_tol = "Name1"`.
 --> $DIR/ulps_tol_duplicate_type_name.rs:4:43
  |
4 | #[float_eq(ulps_tol = "Name1", ulps_tol = "Name2")]
  |                                           ^^^^^^^
